--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,16 @@
 /* header styles */
+/*Fall 2017 Styles added*/
 #headerWrapper .container {
 	position:relative;
 }
 #headerWrapper .container .row {
-	margin:0;
+	margin:0; 
 }
 
 .heart-hero__info hr {
 display: none;	
 }
-
+ 
 .heart-hero--entry .heart-hero__mask {
     height: 270px;
     padding: 40px 50px 0;
@@ -27,24 +28,24 @@ background-position: top;
     min-height: 30px;
 }
 
+.heart-hero__mask {
+background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9) 0%, rgba(240,47,23,0.9) 29%, rgba(248,149,33,0.9) 100%);	
+}
 
+
+.entry-text-link.secondary-step.step-button.sidebar-button.btn.btn-lg.btn-primary, .btn.btn-lg.btn-primary {
+    background: #f7921e !important;
+}
+
+.btn-primary, .btn-primary:link, .btn-primary:visited, a.btn-primary, a.btn-primary:link, a.btn-primary:visited {
+    background-color: #f7921e;
+    border-color: #ca1e21;
+    color: #fff;
+}
 .heart-hero--entry .heart-hero__info {
     clear: both !important;
     float: right !important;
     margin: 0;
-}
-.appArea {
-	max-width: 100% !important;
-	width: 100% !important;
-}
-label {
-	font-weight: 100 !important;
-}
-
-input[type="checkbox"], input[type="radio"] {
-	margin: 4px 4px 4px !important;
-	display: inline;
-	font-size: inherit;
 }
 
 .volunteer-survey p{
