--- a/css/custom.css
+++ b/css/custom.css
@@ -34,11 +34,11 @@ background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9
 
 
 .entry-text-link.secondary-step.step-button.sidebar-button.btn.btn-lg.btn-primary, .btn.btn-lg.btn-primary {
-    background: #f7921e !important;
+    background: #EE3720 !important;
 }
 
 .btn-primary, .btn-primary:link, .btn-primary:visited, a.btn-primary, a.btn-primary:link, a.btn-primary:visited {
-    background-color: #f7921e;
+    background-color: #EE3720;
     border-color: #ca1e21;
     color: #fff;
 }
