--- a/css/custom.css
+++ b/css/custom.css
@@ -138,7 +138,7 @@ div.responsive a.secondary-step, div.responsive button.secondary-step {
 }
 
 .entry-text-link.secondary-step.step-button.sidebar-button.btn.btn-lg.btn-primary, .btn.btn-lg.btn-primary {
-/* background: #f7921e !important;	*/
+ background: #EE3720 !important;	
 }
 
 .loggedin, .loggedout {
