--- a/css/custom.css
+++ b/css/custom.css
@@ -34,7 +34,7 @@ background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9
 
 
 .btn-primary, .btn-primary:link, .btn-primary:visited, a.btn-primary, a.btn-primary:link, a.btn-primary:visited {
-    background-color: #EE3720;
+    background-color: #EE3720 !important;
     border-color: #ca1e21;
     color: #fff;
 }
