--- a/css/custom.css
+++ b/css/custom.css
@@ -117,7 +117,7 @@ div.responsive a.secondary-step, div.responsive button.secondary-step {
 	font-size:14px;
 }
 .button {
-	background-color: #e21b21; 
+	background-color: #EE3720; 
 	border: none;
 	color: white;
 	padding: 10px 20px 10px 20px;
