--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,11 @@
-use this for fall 2017
+/*use this for fall 2017*/
 
 /* header styles */
 /*Fall 2017 Styles added*/
+.heart-hero__mask {
+   background: rgba(231,56,39,1);
+   background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9) 0%, rgba(240,47,23,0.9) 29%, rgba(248,149,33,0.9) 100%);
+}
 #headerWrapper .container {
 	position:relative;
 }
