--- a/css/custom.css
+++ b/css/custom.css
@@ -3,8 +3,8 @@
 /* header styles */
 /*Fall 2017 Styles added*/
 .heart-hero__mask {
-   background: rgba(231,56,39,1);
-   background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9) 0%, rgba(240,47,23,0.9) 29%, rgba(248,149,33,0.9) 100%);
+   background: rgba(231,56,39,1) !impportant;
+   background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9) 0%, rgba(240,47,23,0.9) 29%, rgba(248,149,33,0.9) 100%) !important;
 }
 #headerWrapper .container {
 	position:relative;
