--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,8 @@ background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9
 
 .heart-hero--participant-center{
 background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9) 0%, rgba(240,47,23,0.9) 29%, rgba(248,149,33,0.9) 100%);	
+background-image: url(http://www2.heart.org/Fall2017HW/dist/heart-walk/image/default-personal-cover.png);
+    margin: 0;
 }
 
 .btn-primary, .btn-primary:link, .btn-primary:visited, a.btn-primary, a.btn-primary:link, a.btn-primary:visited {
