--- a/css/custom.css
+++ b/css/custom.css
@@ -36,8 +36,7 @@ background: linear-gradient(to right, rgba(231,56,39,0.9) 0%, rgba(246,41,12,0.9
 }
 
 .heart-hero--participant-center{
-
-background-image: url(http://www2.heart.org/Fall2017HW/dist/heart-walk/image/default-personal-cover.png);
+background-image: url("http://www2.heart.org/Fall2017HW/dist/heart-walk/image/default-personal-cover.png");
     margin: 0;
 }
 
